Claude cleanup